objects/Global_Error__c.object
<CustomObject>
    <fields>
        <fullName>Errors__c</fullName>
        <description>This holds all the error messages, formatted even.</description>
        <label>Errors</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Global Error</label>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Errors__c</columns>
        <columns>User__c</columns>
        <columns>Module__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Errors</label>
    </listViews>
    <nameField>
        <label>Global Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>