objects/Global_Error__c/listViews/All_Errors.listView-meta.xml
<ListView>
    <fullName>All_Errors</fullName>
    <columns>NAME</columns>
    <columns>Errors__c</columns>
    <columns>User__c</columns>
    <columns>Module__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Errors</label>
</ListView>